# homework-15

./: Dockerfile  docker-compose.yml  pyproject.toml
Achievements/: models.py
Tanks/: apps.py  models.py
hello/: urls.py  views.py
players/: models.py
simple_app/simple_app/: settings.py  urls.py
tests/: test_simple_app.py
