[tool.poetry]
name = "simple_app"
version = "0.1.0"
description = ""
authors = ["Ilia Silich <iliya.silich01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "3.2.22"
psycopg2 = "^2.9.9"
faker = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
